# Enterprise-Grade-System-7z

./: CMakeLists.txt
config/: config.yml
src/: main.cpp
src/adapters/: DatabaseAdapter.cpp  DatabaseAdapter.hpp  NetworkAdapter.cpp  NetworkAdapter.hpp
src/controllers/: UserController.cpp  UserController.hpp
src/models/: User.cpp  User.hpp
src/services/: UserService.cpp  UserService.hpp
src/utils/: Logger.cpp  Logger.hpp
